--- a/login.html
+++ b/login.html
@@ -5,31 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - HSE Portal</title>
     <link rel="icon" href="assets/img/hse.png">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/login.css">
 </head>
 <body>
 
-    <div class="registration-container">
+    <div class="login-container ">
         <h2>Welcome Back</h2>
+        <img src="assets/img/hse.png" alt="Logo" class="login-logo">
         <form action="login.php" method="POST">
             <div class="input-group">
                 <label for="email">Email Address</label>
-                <input type="email" id="email" name="email" placeholder="you@example.com" required>
+                <input type="email" id="email" name="email"required>
             </div>
 
             <div class="input-group">
                 <label for="password">Password</label>
-                <input type="password" id="password" name="password" placeholder="Enter your password" required>
+                <input type="password" id="password" name="password" required>
             </div>
 
-          <?php if (isset($error) && !empty($error)) echo "<p style='color:red;'>$error</p>"; ?>
+          
 
 
             <button type="submit" class="register-button">Login</button>
         </form>
 
         <p class="login-link">
-            Don’t have an account? <a href="register.html">Register Here</a>
+            Don’t have an account? <a href="index.html">Register Here</a>
         </p>
     </div>
 
